Corrects error introduced by an edit, correcting an error introduced by another edit.  Spotted by Jonathon M.  More to come.

--- a/2017/tex/2q-2h-wicks-theorem.tex
+++ b/2017/tex/2q-2h-wicks-theorem.tex
@@ -213,8 +213,8 @@ $.
 \begin{samepage}
 \thmproof{
   Let $n$ be the number of operators in $Q$ and assume, without loss of generality, that $Q$ is already in normal order so that $\no{Q}=Q$.
-  If $q$ is a quasiparticle annihilation operator then $\no{Qq}=Qq$ and all cross-contractions vanish, so the statement holds trivially.
-  If $q$ is a quasiparticle creation operator then $\no{Qq}=(-)^nqQ$ and, using an anticommutator relation derived in the appendix (\cref{prop:pull-through-relation}),
+  If $q$ is a particle annihilation operator then $\no{Qq}=Qq$ and all cross-contractions vanish, so the statement holds trivially.
+  If $q$ is a particle creation operator then $\no{Qq}=(-)^nqQ$ and, using an anticommutator relation derived in the appendix (\cref{prop:pull-through-relation}),
   \begin{align*}
     Qq
   =
@@ -229,7 +229,7 @@ $.
     \sum_{k=1}^n
     \no{\ctr{Q(}{q}{_k)}{q} Q(q_k)q}
   \end{align*}
-  since $\no{\ctr{Q(}{q}{_k)}{q} Q(q_k)q}=(-)^{n-k}\no{q_1\cd\ctr{}{q}{_k}{q}q_kq\cd q_n}$ and $\ctr{}{q}{_k}{q} q_kq=[q_k,q]_+$ when $q$ is a quasiparticle creation operator (see \cref{dfn:contraction}).
+  since $\no{\ctr{Q(}{q}{_k)}{q} Q(q_k)q}=(-)^{n-k}\no{q_1\cd\ctr{}{q}{_k}{q}q_kq\cd q_n}$ and $\ctr{}{q}{_k}{q} q_kq=[q_k,q]_+$ when $q$ is a particle creation operator (see \cref{dfn:contraction}).
 }
 \end{samepage}
 \end{lem}
