Corrects a counting error in the Hartree Fock notes, caught by Jonathon M.

--- a/2017/tex/1q-1h-hartree-fock.tex
+++ b/2017/tex/1q-1h-hartree-fock.tex
@@ -245,7 +245,7 @@ Separating out the terms in \cref{eq:hartree-fock-lagrangian} involving a partic
   \sum_i
   \ev_{ki}(\ip{\y_k|\y_i}-\d_{ki})
 -
-  \sum_i
+  \sum_{i\neq k}
   \ev_{ik}(\ip{\y_i|\y_k}-\d_{ik})
 \\&\
 +
