fixed typos from JM

--- a/2020/lecture_notes/tex/1_HartreeFock_a.tex
+++ b/2020/lecture_notes/tex/1_HartreeFock_a.tex
@@ -147,7 +147,7 @@ Determinant wavefunction, into a row vector:
 and subject this row vector to a linear transformation, by multiplying
 it by some NxN nonsingular matrix
 
-\[\psi_k' = \sum\lambda \psi_\lambda A_{\lambda k} \]
+\[\psi_k' = \sum\limits_\lambda \psi_\lambda A_{\lambda k} \]
 
 \[\boldsymbol{\psi'} = \boldsymbol{\psi} \boldsymbol{A}\]
 
@@ -267,8 +267,6 @@ ket's $\langle f \textbar{} \hat{A}\textbar{} g \rangle =
 \rangle $
 
 \[ = N! \langle \psi_1^1 \psi_2^2 \dots \psi_N^N | \hat{A}  \sum\limits_{i} \hat{h}(i)  | \hat{A} (\psi_1^1 \psi_2^2 \dots \psi_N^N) \rangle \]
-
-2. 
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
