adding lecture notes and exercises for second quantization a

--- a/2020/lecture_notes/tex/3_Second_Quantization_a.tex
+++ b/2020/lecture_notes/tex/3_Second_Quantization_a.tex
@@ -6,7 +6,9 @@
 \usepackage{mathrsfs}
 \usepackage{bbm}
 \usepackage{braket}
+\usepackage{hyperref}
 \usepackage{verbatim}
+\usepackage{cancel}
 \usepackage[margin=1.0in]{geometry}
 \newcommand{\ol}{\overline}
 \newcommand{\ve}{\varepsilon}
@@ -19,16 +21,16 @@
 \maketitle
 \noindent
 \section{The wavefunction is fully represented by a linear combination of Slater determinants}
-Recall that the set of spin orbitals ${\phi_p}$ form a basis for the one particle space.
-They represent single-particle states.
-These spin orbitals form a complete set, such that any single particle state $\psi$ can be represented by
+Recall that the set of all spin orbitals $\{\phi_p\}$ forms a basis for the one-particle space.
+They can be used to represent any single-particle state.
+These spin orbitals form a complete set; any single particle state $\psi$ can be represented by
 a linear combination of spin orbitals:
 \[\ket{\psi} = \sum_p \ket{\phi_p}\braket{\phi_p | \psi} \]
 How many terms are in the summation over $p$? 
 In theory, we could have an infinite set of spin orbitals.
 For all practical purposes, however, we define a finite number of spin orbitals, known as the basis set. \\
 \\
-A N-particle state $\Psi$ can be expressed as a tensor product of N spin orbitals multiplied by a coefficient:
+A N-particle state $\Psi$ can be expressed as a tensor product\footnote{See \url{http://hitoshi.berkeley.edu/221A/tensorproduct.pdf} for a thorough explanation of tensor products} of N spin orbitals multiplied by a coefficient:
 \[\ket{\Psi} = \sum_{p_1}\sum_{p_2}\cdots\sum_{p_N} \ket{\phi_{p_1}}\otimes \ket{\phi_{p_2}} \otimes \cdots \otimes \ket{\phi_{p_N}}  \bra{\phi_{p_N}}\otimes \cdots \otimes \bra{\phi_{p_2}} \otimes \braket{\phi_{p_N}  | \Psi} \]
 Or to write it more succinctly: 
 \begin{equation}
@@ -85,28 +87,39 @@ We have arrived at an expression that we know how to interpret!
 The Slater determinants form a basis in which we can expand a N-particle state $\ket{\Psi}$. 
 $\ket{\Psi}$ can be completely expressed as a linear combination of all possible Slater determinants that can be formed from spin orbitals $\phi_p$ in a defined basis set, with a coefficient $c_p$. 
 This expansion in terms of Slater determinants is often called the Configuration Interaction (CI) expansion.
-
+\\ \\
 There are some shortcomings to this way of expressing things. 
-First, the description of the N-particle state $\braket{\Psi}$ is explicitly dependent on the particle number N. 
+First, the description of the N-particle state $\ket{\Psi}$ is explicitly dependent on the particle number N. 
 This means that a different expression has to be written for systems with different particle numbers N. 
 Second, (talk about explicit bookkeeping of antisymmetry)
 
 \section{Representing Slater determinants with occupation numbers}
 We want to find a different way of representing our Slater determinant $\Phi_{p_1 \cdots p_N}$. 
-Let's think about we actually need to define a Slater determinant. 
+Let's think about what we actually need to define a Slater determinant. 
 If we have a set of spin orbitals $\phi_p$, all we really need to know in order to uniquely define a determinant is which $\phi_p$ is occupied, and thus included in our Slater determinant, and which $\phi_p$ is not. 
 In other words, we only need the set of indices $p$. 
 For the Slater determinant written as $\Phi_{p_1 \cdots p_N}$, we need to know indices $p_1 \cdots p_N$.
-
+\\ \\
 We can assign an ``occupation number" to each $\phi_p$ in our basis set.
-If it is occupied and in our Slater determinant, we can assign a number 1, denoting that there is one electron in the spin orbital.
+If it is occupied and in our Slater determinant, we can assign a number 1, denoting that there is one electron in the spin-orbital.
 If it is unoccupied, we can assign a number 0.
 In this course, we are only dealing with electrons, which can only have occupation numbers 1 or 0, since two electrons cannot occupy the same spin orbital. 
-For particles which are bosons, we do not have this limitation and the occupation numbers are only restricted by the total number of particles N. 
-
-The general notation for representing a state in the occupation number representation is this: 
-\[\ket{n_1 \, n_2 \, \cdots \,  n_p \, \cdots }\] 
-where $n_p = 0$ if single-particle state $p$ is unoccupied and $n_p = 1$ if single-particle state $p$ is occupied.
+For particles which are bosons, we do not have this limitation and the occupation numbers are only restricted by the total number of particles N (in that all occupation numbers must sum to N).  \\
+\\
+The general notation for representing a state in the occupation number (ON) representation is this: 
+\[\ket{\*{n}} = \ket{n_1 \, n_2 \, \cdots \,  n_p \, \cdots n_M}\] 
+where $n_p = 0$ if single-particle state $p$ is unoccupied and $n_p = 1$ if single-particle state $p$ is occupied. We see there are M occupation numbers, one for each spin-orbital in our basis.\\
+\\ 
+The ON vectors can be manipulated as an ordinary inner-product vector space. 
+We can define an inner product between two ON vectors $\*{n}$ and $\*{k}$ as: 
+\[\braket{\*{n} | \*{k}} = \delta_{\*{n} \*{k}} = \prod_{p = 1}^M \delta_{n_Pk_P}\]
+A general vector can be expressed as a linear combination of ON vectors
+\[\ket{\*{c}} = \sum_n c_n \ket{\*{n}} \]
+and an inner product of two general vectors as: 
+\[\braket{\*{c}| \*{d}} = \sum_n c_n^*d_n \]
+We also have the usual resolution of the identity: 
+\[1 = \sum_n \ket{\*{n}}\bra{\*{n}} \]
+The sum n is over the \textbf{full} set of ON vectors for all numbers of electrons in a given basis with spin-orbitals M. 
 
 \section{Relating the determinant and ON formalisms}
 
@@ -115,8 +128,9 @@ For the set of ordered indices $p_1 < p_2 < \cdots < p_n$, a determinant $\Phi_{
 where
 \[n_p = 0 \,\, \text{if $p \notin \{p_1 \cdots p_N\}$} \]
 \[n_p = 1 \,\, \text{if $p \in \{p_1 \cdots p_N\}$} \]
-That is to say, $n_p$ is zero if spin orbital $\phi_p$ is not part of the determinant $\Phi_{p_1 \cdots p_N}$, and one if it is. \\
-\\
+That is to say, $n_p$ is zero if spin orbital $\phi_p$ is not part of the determinant $\Phi_{p_1 \cdots p_N}$, and one if it is. 
+Thus, in a given spin-orbital basis, there is a one-to-one mapping between Slater determinants with spin orbitals in canonical order and the ON vectors. 
+\\ \\ 
 Let's go through an example. 
 Say we have a 4 particle system. 
 We choose to represent this system with a basis set of 10 spin orbitals. 
@@ -136,12 +150,12 @@ we now delve into the mathematics of the ON representation.
 %where n_p = 0 if $\phi_p$ is unoccupied and n_p = 1 if $\phi_p$ is occupied. 
 %Hilbert space vs Fock space 
 \section{Creation and annihilation operators}
-Just as there were operators that acted on state vectors, there are operators in the ON representation. 
+Just as there were operators that acted on state vectors, there are operators that act on ON vectors. 
 Can we come up with some operators that make sense for this representation? 
-Remember that we are talking about performing actions on the numbers 1 or 0, corresponding to whether a spin state is occupied or not. 
+Remember that we are talking about performing actions on the numbers 1 or 0, corresponding to whether a spin-orbital is occupied or not. 
 Realistically, there is not many basic actions that we can think of. 
 In fact, there are just \textit{two} basic operators that act in the ON representation:
-one that makes an occupied spin state unoccupied ($n_p$ goes from 1 to 0) and one that makes an unoccupied state occupied (($n_p$ goes from 0 to 1). 
+one that takes $n_p$ from 1 to 0 (makes an occupied spin-orbital unoccupied) and one that takes $n_p$ from 0 to 1 (makes an unoccupied spin-orbital occupied). 
 
 \subsection{The Annihilation Operator} 
 First, we can define an operator that takes $n_p$ from 1 to 0.
@@ -151,10 +165,12 @@ a_p \ket{\cdots n_p \cdots} = (-1)^{m} n_p \ket{\cdots (1-n_p) \cdots}
 \end{equation}
 where 
 \[m = \sum_{k=1}^{p-1} n_k \]
-You can see that when $n_p$ is 1, acting $a_p$ on the ON representation of the determinant returns a phase factor times that determinant with $n_p$=0. 
+You can see that when $n_p$ is 1, acting $a_p$ on the ON state returns a phase factor times that state with $n_p$=0. 
 Specifically, phase factor depends on the sum of all $n$ before $n_p$. 
-If $n_p$ is already 0, we just get 0 for the final result. 
-% in determinant form
+If $n_p$ is already 0, we just get 0 for the final result. \\ \\
+We can represent this in determinant form, assuming an ordered set $\{p_1 < \cdots  < p_N\}$,
+\[a_p \ket{\Phi_{\cdots p \cdots}} = (-1)^m  \ket{\Phi_{\cdots \cancel{p} \cdots }} \]
+where the $\cancel{p}$ means spin orbital $\phi_p$ is not in the determinant $\Phi$.
 In the language of determinants, $a_p$ takes a determinant where spin orbital $\phi_p$ is occupied and makes it unoccupied. 
 To say it another way, it decreases the number of particles in a state by one. 
 If $\phi_p$ is already unoccupied, we get a 0 because you cannot take away a particle that is not there.
@@ -173,7 +189,7 @@ Using our definition of the annihilation operator in Equation 2, we know that
 \subsection{The Creation Operator}
 We now need to define an operator that takes $n_p$ from 0 to 1.
 To do this, let's start from a relation we have discussed in the previous section: 
-\[a_p \ket{0 \cdots n_p \cdots0} = a_p \ket{n_p} = \ket{0} \]
+\[a_p \ket{0 \cdots n_p \cdots0} = \ket{0} \]
 We can take the adjoint of both sides: 
 \begin{align*}
 (a_p \ket{0 \cdots n_p \cdots0})^\dagger &= (\ket{0})^\dagger \\
@@ -184,7 +200,6 @@ We can now right project $\ket{0}$ on both sides:
 \bra{0 \cdots n_p \cdots0} a_p^\dagger \ket{0} &= \braket{0 | 0}  \\
 \bra{0 \cdots n_p \cdots0} a_p^\dagger \ket{0} &= 1  \\
 \end{align*}
-
 Remember that $\bra{0 \cdots n_p \cdots0} $ represents a single particle state in which only spin orbital $\phi_p$ is occupied. 
 We see that in order for the quantity $\bra{0 \cdots n_p \cdots0} a_p^\dagger \ket{0}$ to equal 1, $a_p^\dagger \ket{0}$ has to also give a state in which just $\phi_p$ is occupied
 because of the orthonormality of the spin orbitals. We obtain:
@@ -202,9 +217,11 @@ a_p^\dagger \ket{\cdots n_p \cdots} = (-1)^{m} (1 - n_p) \ket{\cdots (1-n_p) \cd
 \end{equation}
 where 
 \[m = \sum_{k=1}^{p-1} n_k \]
-You can see that when $n_p$ is 0, acting $a_p^\dagger$ on the ON representation of the determinant returns a phase factor times that determinant with $n_p$=1. 
-If $n_p$ is already 1, we get a 0 for the final result.
-% in determinant form
+You can see that when $n_p$ is 0, acting $a_p^\dagger$ on the ON state returns a phase factor times that state with $n_p$=1. 
+If $n_p$ is already 1, we get a 0 for the final result. \\ \\
+We can represent this in determinant form, assuming an ordered set $\{p_1 < \cdots < p_N\}$,
+\[a_p^\dagger \ket{\Phi_{\cdots \cancel{p} \cdots}} = (-1)^m  \ket{\Phi_{\cdots p \cdots }} \]
+where the $\cancel{p}$ means spin orbital $\phi_p$ is not in the determinant $\Phi$.
 In the language of determinants, $a_p^\dagger$ takes a determinant where spin orbital $\phi_p$ is unoccupied and makes it occupied. 
 To say it another way, it increases the number of particles in a state by one. 
 If $\phi_p$ is already occupied, we get a 0 because we cannot occupy the same spin state more than once. 
@@ -215,26 +232,26 @@ We refer to $a_p^\dagger$ as the creation operator, because it creates a particl
 The annihilation and creation operators are the building blocks for more complicated operators, which are represented by products of the two.
 If an operator is particle conserving, we expect the same number of creation and annihilation operators. 
 The simplest particle conserving operator we can come up with is just the product of one creation and one annihilation operator: 
-\[x_p^\dagger x_p \]
+\[a_p^\dagger a_p \]
 There are two cases, applying the operator on a state in which $n_p = 1$ and a state in which $n_p = 0$.
 We now treat both cases to see the consequences of this operator: \\
 \\
 Case 1: $n_p = 1$ \\
 \begin{align*}
-x_p^\dagger x_p \ket{\cdots p \cdots} &= x_p^\dagger x_p \ket{\cdots 1 \cdots} \\
-&= (-1)^m x_p^\dagger \ket{\cdots 0 \cdots} \\
+a_p^\dagger a_p \ket{\cdots p \cdots} &= a_p^\dagger a_p \ket{\cdots 1 \cdots} \\
+&= (-1)^m a_p^\dagger \ket{\cdots 0 \cdots} \\
 &= (-1)^m (-1)^m \ket{\cdots 1 \cdots}  \\
 &= (1) \ket{\cdots n_p \cdots}  \\
 \end{align*}
 Case 2: $n_p = 0$ \\
 \begin{align*}
-x_p^\dagger x_p \ket{\cdots p \cdots} &= x_p^\dagger x_p \ket{\cdots 0 \cdots} \\
+a_p^\dagger a_p \ket{\cdots p \cdots} &= a_p^\dagger a_p \ket{\cdots 0 \cdots} \\
 &= (0)\ket{\cdots 0 \cdots} \\
 \end{align*}
 We see that generally, 
-\[x_p^\dagger x_p \ket{\cdots p \cdots} = n_p\ket{\cdots p \cdots}  \]
-Operating the operator $x_p^\dagger x_p$ on a state will give back the occupation number times that state.
-The occupation numbers thus are eigenvalues of the operator $x_p^\dagger x_p$. 
+\[a_p^\dagger a_p \ket{\cdots p \cdots} = n_p\ket{\cdots p \cdots}  \]
+Operating the operator $a_p^\dagger a_p$ on a state will give back the occupation number times that state.
+The occupation numbers thus are eigenvalues of the operator $a_p^\dagger a_p$. 
 Because of this, we refer to this operator as the Number operator $N_p$. 
 We can define a Total Number operator, $\hat{N} = \sum_p N_p$, which gives back the total numbers of particles in a state. \\
 \\
@@ -242,17 +259,7 @@ The number operator gives us some insight as to why we refer to this formalism a
 Just as in the ``energy representation", basis states are eigenfunctions of an energy operator (Hamiltonian),
 in the ``occupation number representation", basis states are eigenfunctions of the number operator. 
 
-
-\subsection{The determinant can be represented by a string of creation operators}
-
-Any string of creation operators acting on the vacuum is equivalent to the corresponding Slater determinant with the same ordering of states. 
-%go through lemma 1 and 2 (maybe after anticommutation relations b/c need those? , also, see property 2 
-%distinguish determinant form vs ON form
-%determinant can be directly represented without phase ambiguity 
-%why spend so much time on ON if don't really use it? 
-% from here on mostly just work with determinant representation 
-
-\section{Anticommutation relations}
+\subsection{Anticommutation relations}
 
 Recall that the commutator of 2 operators $\hat{A}$ and $\hat{B}$ is defined as
 \[ [\hat{A}, \hat{B} ] = \hat{A}\hat{B} - \hat{B}\hat{A} \]
@@ -264,9 +271,7 @@ There are some key anticommuntation relations that will be critical for mathemat
 \item $\{a_p^\dagger, a_q^\dagger \} = 0$
 \item $\{a_p^\dagger, a_q\} = \delta_{pq}$
 \end{enumerate}
-
-\subsection{Select properties}
-There are select properties that directly result from the anticommutation relations: 
+Additionally, there are some properties that directly result from the anticommutation rules: 
 \begin{enumerate}
 \item $(a_p)^2 = 0$, $(a_p^\dagger)^2 = 0$
 \item $a_pa_q = -a_qa_p$,  $a_p^\dagger a_q^\dagger = -a_q^\dagger a_p^\dagger$
@@ -275,29 +280,51 @@ There are select properties that directly result from the anticommutation relati
 \item $[a_p, N_q] = \delta_{pq}a_p$
 \item $[a_p^\dagger, N_q] = -\delta_{pq}a_p^\dagger$
 \end{enumerate}
+You will prove these anticommuntation relations and properties in your homework. 
 
-\begin{comment}
-Types of problems:
-1. Slater's rules
-2. 
+\section{The determinant can be represented by a string of creation operators}
 
+For an ordered set $p_1 < \cdots  < p_N$,
+we can see that 
+\[\ket{\Phi_{p_1, p_2, \cdots, p_N}} = a_{p_1}^\dagger \ket{\Phi_{p_2, \cdots, p_N}} = a_{p_1}^\dagger a_{p_2}^\dagger \ket{\Phi_{p_3, \cdots, p_N}}=
+ a_{p_1}^\dagger a_{p_2}^\dagger \cdots a_{p_N}^\dagger \ket{0}\]
+In words, a Slater determinant can be represented by a string of creation operators acting on the vacuum in the same order as the spin states in the Slater determinant. \\ \\
+If we now consider a unordered set $q_1 \cdots q_N$, we can conclude that 
+\begin{equation}\ket{\Phi_{q_1 \cdots p_N}} = a_{q_1}^\dagger \cdots a_{p_N}^\dagger \ket{0}\end{equation}
+since in order to put $q_1 \cdots q_N$ in order, the change of sign will be the same whether we permute the determinant or the string of operators. 
+Since the change of sign is the same on both sides, we do not have to keep track of it. 
+Thus, \textit{any} string of creation operators acting on the vacuum is equivalent to the corresponding Slater determinant with the same ordering of states. 
+The determinant can be directly represented as a string of creation operators without phase ambiguity.
+We have now arrived at the reason we refer to this formalism as ``second quantization".
+In ``first quantization", we formulate physical observables to be represented by operators.
+These operators act on a functional form of our wavefunction. 
+In ``second quantization", our wavefunction itself is represented by a string of operators. 
+The next task is to formulate our Hamiltonian in terms of creation and annihilation operators. 
+Once that is done, everything will be in terms of these two operators, and we will see that this unified representation serves to greatly simplify our mathematics.  \\
+\\
+From here on out, we will go back and forth between the two forms in equation 4, without much reference to the occupation number formalism. 
+It was useful for understanding the context of creation and annihilation operators, but for our purposes it will be easier to represent our wavefunction in the determinant representation
+and not with occupation numbers. 
 
-Types of ways to solve:
-1. First quantization
-2. 2nd quantization in the true vacuum without Wick's theorem
-3. 2nd quantization in the true vacuum with Wick's theorem
-4. PH formalism with Wick's theorem 
-5. PH formalism with Wick's theorem and $\Phi$-normal ordered Hamiltonian
-
-\end{comment}
-
-\section{Exercises}
-\begin{enumerate}
-\item Show that the number operator $N_p$ is hermitian ($N_p = N_p^\dagger$)
-\item prove the anticommuntation relations
-\item prove properties 
-\item evaluate $\braket{\Phi_{pq} | \Phi_{rs}}$ using second quantization
-\end{enumerate}
+\section{A note on spaces}
+We refer to the space of all possible Slater determinants for a system with N particles in M spin orbitals as the N-particle Hilbert space.
+In the ON formalism, the N-particle Hilbert space contains all ON vectors for which the sum of occupation numbers is N:
+\[ N = \sum_{P = 1}^M n_P \]
+The N-particle Hilbert space can be thought of as a subset of the \textit{Fock space}. 
+ A $2^M$--dimensional Fock space F(M) is defined as a direct sum of subspaces $F(M, N)$:
+ \[F(M) = F(M, 0 ) \oplus  F(M, 1 )  \oplus   F(M, 2 )  \oplus \cdots \oplus F(M, N) \]
+where each $F(M, N)$ is the just the N-particle Hilbert space defined above. 
+The occupation vectors 
+\[\ket{\*{n}} = \ket{n_1 \, n_2 \, \cdots \,  n_p \, \cdots n_M}\] 
+form an orthonormal basis in the Fock space F(M). 
+We see that the creation and annihilation operators take us from one $F(M, N_1)$ to another $F(M, N_2)$.
+F(M, 0) is the true vacuum state $\ket{0}$. 
 
 \section{Recommended Resources}
+\begin{itemize}
+\item Lecture notes of J. Paldus \url{http://www.math.uwaterloo.ca/~paldus/resources.html}
+\item Lectures of Piotr Piecuch (Search Piotr Piecuch CHEM 580/PHYSICS 580 on Youtube)
+\item ``The Many-Body Problem in Quantum Mechanics" by March, Young, and Sampanthar
+\item ``Molecular Electronic-Structure Theory" by Helgaker et al.
+\end{itemize}
 \end{document}
